--- a/kotlinlearning/src/main/AndroidManifest.xml
+++ b/kotlinlearning/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quantata.kotlinlearning">
+    package="com.quantata.kotlinlearning" >
 
     <application
         android:allowBackup="true"
@@ -8,11 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyResources">
+        android:theme="@style/Theme.MyResources" >
+        <activity
+            android:name=".fragment.TwoColorActivity"
+            android:exported="false" />
         <activity
             android:name=".basic.BasicActivity"
             android:exported="false" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
