--- a/simplemusicplayer/src/main/AndroidManifest.xml
+++ b/simplemusicplayer/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.quantata.simplemusicplayer" >
 
+    <!-- Target Sdk 가 API LEVEL 28 이상인 경우 Foreground Service 권한 요청이 꼭 필요 -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
