--- a/qrcodereader/build.gradle
+++ b/qrcodereader/build.gradle
@@ -29,9 +29,22 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
+
+    def camerax_version = "1.1.0-alpha04"
+
+    implementation "androidx.camera:camera-camera2:$camerax_version" // CameraX 코어 라이브러리
+    implementation "androidx.camera:camera-lifecycle:$camerax_version" // CameraX 생명 주기 라이브러리
+    implementation "androidx.camera:camera-view:1.1.0-beta03" // CameraX View 관련 라이브러리
+
+    implementation "comgoogle.mlkit:barcode-scanning:16.1.1" // ML kit 라이브러리
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
