--- a/qrcodereader/build.gradle
+++ b/qrcodereader/build.gradle
@@ -37,13 +37,21 @@ android {
 
 dependencies {
 
-    def camerax_version = "1.1.0-alpha04"
+    def camerax_version = "1.1.0-beta03"
 
-    implementation "androidx.camera:camera-camera2:$camerax_version" // CameraX 코어 라이브러리
-    implementation "androidx.camera:camera-lifecycle:$camerax_version" // CameraX 생명 주기 라이브러리
-    implementation "androidx.camera:camera-view:1.1.0-beta03" // CameraX View 관련 라이브러리
+    implementation("androidx.camera:camera-camera2:${camerax_version}")
+    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
+    implementation("androidx.camera:camera-view:${camerax_version}")
 
-    implementation "comgoogle.mlkit:barcode-scanning:16.1.1" // ML kit 라이브러리
+    // 2022.04.29.Fri This version is implementation not working.
+//    def camerax_version = "1.0.2"
+//    def camerax_view_version = "1.1.0-beta03"
+//
+//    implementation("androidx.camera:camera-camera2:${camerax_version}")// CameraX 코어 라이브러리
+//    implementation("androidx.camera:camera-lifecycle:${camerax_version}") // CameraX 생명 주기 라이브러리
+//    implementation("androidx.camera:camera-view:${camerax_view_version}") // CameraX View 관련 라이브러리
+
+    implementation "com.google.mlkit:barcode-scanning:17.0.2" // ML kit 라이브러리
 
 
     implementation 'androidx.core:core-ktx:1.7.0'
